--- a/README
+++ b/README
@@ -1,3 +1,3 @@
 Repositorio para o evento Agile Aplicado que se celebra o 21 de maio de 2011 en Santiago de Compostela.
 
-Agile-Galicia
+Organizado por Agile-Galicia
